objects/TSO_Template__c.object
<CustomObject>
    <description>List of Trial templates to allow dynamic list of template ids.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trialforce_Source_Org_Id__c</fullName>
        <label>Trialforce Source Org Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trialforce_Template_Id__c</fullName>
        <label>Trialforce Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TSO Template</label>
    <nameField>
        <label>TSO Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TSO Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>